4 October 2023: Wouter
	- Fix #946: Forwarder returns servfail on upstream response noerror no
	  data.

3 October 2023: George
	- Merge #881: Generalise the proxy protocol code.

2 October 2023: George
	- Fix misplaced comment.

22 September 2023: Wouter
	- Fix #942: 1.18.0 libunbound DNS regression when built without
	  OpenSSL.

18 September 2023: Wouter
	- Fix rpz tcp-only action with rpz triggers nsdname and nsip.

15 September 2023: Wouter
	- Merge #936: Check for c99 with autoconf versions prior to 2.70.
	- Fix to remove two c99 notations.

14 September 2023: Wouter
	- Fix authority zone answers for obscured DNAMEs and delegations.

8 September 2023: Wouter
	- Fix send of udp retries when ENOBUFS is returned. It stops looping
	  and also waits for the condition to go away. Reported by Florian
	  Obser.

7 September 2023: Wouter
	- Fix to scrub resource records of type A and AAAA that have an
	  inappropriate size. They are removed from responses.
	- Fix to move msgparse_rrset_remove_rr code to util/msgparse.c.
	- Fix to add EDE text when RRs have been removed due to length.
	- Fix to set ede match in unit test for rr length removal.
	- Fix to print EDE text in readable form in output logs.

6 September 2023: Wouter
	- Merge #931: Prevent warnings from -Wmissing-prototypes.

31 August 2023: Wouter
	- Fix autoconf 2.69 warnings in configure.
	- Fix #927: unbound 1.18.0 make test error. Fix make test without SHA1.

30 August 2023: Wouter
	- Fix for WKS call to getservbyname that creates allocation on exit
	  in unit test by testing numbers first and testing from the services
	  list later.

28 August 2023: Wouter
	- Fix for version generation race condition that ignored changes.

25 August 2023: Wouter
	- Fix compile error on NetBSD in util/netevent.h.

23 August 2023: Wouter
	- Tag for 1.18.0rc1 release. This became the 1.18.0 release on
	  30 aug 2023, with the fix from 25 aug, fix compile on NetBSD
	  included. The repository continues with version 1.18.1.
